Fix z-index to stop illustration overflow

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -14,7 +14,7 @@ p{
 .person_donate{
   position: relative;
   top: -10%;
-  z-index: 1;
+  z-index: 0;
 }
 
 .bottom-section {
