--- a/src/components/host/host.css
+++ b/src/components/host/host.css
@@ -249,7 +249,7 @@ label {
     height: 80%;
     position: relative;
     top: 16rem;
-    z-index: 1;
+    z-index: 0;
   }
 
   .top-text {
@@ -263,7 +263,7 @@ label {
     height: 100%;
     position: relative;
     top: 11rem;
-    z-index: 1;
+    z-index: 0;
   }
 
   .top-text {
